# chembio-safety-classifier

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
docs/: classifier-spec.md  evaluation-design.md  public-release-checklist.md  refusal-calibration.md  severity-framework.md
examples/: safe_eval_examples.jsonl
schemas/: chembio-label.schema.json
scripts/: validate_examples.py
src/chembio_classifier/: __init__.py  classifier.py  policy.py  severity.py
tests/: test_classifier.py  test_severity.py
